// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MDX processor > md format > compiles GFM tables 1`] = `
"import {jsx as _jsx, jsxs as _jsxs} from "react/jsx-runtime";
import {useMDXComponents as _provideComponents} from "@mdx-js/react";
export const toc = [];
function _createMdxContent(props) {
  const _components = {
    table: "table",
    tbody: "tbody",
    td: "td",
    th: "th",
    thead: "thead",
    tr: "tr",
    ..._provideComponents(),
    ...props.components
  };
  return _jsxs(_components.table, {
    children: [_jsx(_components.thead, {
      children: _jsxs(_components.tr, {
        children: [_jsx(_components.th, {
          children: "a"
        }), _jsx(_components.th, {
          children: "b"
        })]
      })
    }), _jsx(_components.tbody, {
      children: _jsxs(_components.tr, {
        children: [_jsx(_components.td, {
          children: "c"
        }), _jsx(_components.td, {
          children: "d"
        })]
      })
    })]
  });
}
export default function MDXContent(props = {}) {
  const {wrapper: MDXLayout} = {
    ..._provideComponents(),
    ...props.components
  };
  return MDXLayout ? _jsx(MDXLayout, {
    ...props,
    children: _jsx(_createMdxContent, {
      ...props
    })
  }) : _createMdxContent(props);
}
"
`;

exports[`MDX processor > md format > exports the table of contents 1`] = `
"import {jsx as _jsx} from "react/jsx-runtime";
import {useMDXComponents as _provideComponents} from "@mdx-js/react";
export const toc = [{
  "value": "Heading",
  "id": "heading",
  "level": 2
}];
function _createMdxContent(props) {
  const _components = {
    h2: "h2",
    ..._provideComponents(),
    ...props.components
  };
  return _jsx(_components.h2, {
    id: "heading",
    children: "Heading"
  });
}
export default function MDXContent(props = {}) {
  const {wrapper: MDXLayout} = {
    ..._provideComponents(),
    ...props.components
  };
  return MDXLayout ? _jsx(MDXLayout, {
    ...props,
    children: _jsx(_createMdxContent, {
      ...props
    })
  }) : _createMdxContent(props);
}
"
`;

exports[`MDX processor > md format > preserves nested admonitions and rich titles 1`] = `
"import {Fragment as _Fragment, jsx as _jsx, jsxs as _jsxs} from "react/jsx-runtime";
import {useMDXComponents as _provideComponents} from "@mdx-js/react";
export const toc = [];
function _createMdxContent(props) {
  const _components = {
    a: "a",
    code: "code",
    em: "em",
    p: "p",
    strong: "strong",
    ..._provideComponents(),
    ...props.components
  }, {Admonition} = _components;
  if (!Admonition) _missingMdxReference("Admonition", true);
  return _jsx(Admonition, {
    className: "one two",
    id: "outer",
    type: "note",
    title: _jsxs(_Fragment, {
      children: [_jsx(_components.strong, {
        children: "Outer"
      }), " ", _jsx(_components.code, {
        children: "title"
      }), " 😄"]
    }),
    children: _jsx(Admonition, {
      type: "tip",
      title: _jsxs(_Fragment, {
        children: [_jsx(_components.em, {
          children: "Inner"
        }), " ", _jsx(_components.a, {
          href: "/resolved-link",
          children: "link"
        })]
      }),
      children: _jsx(_components.p, {
        children: "Body"
      })
    })
  });
}
export default function MDXContent(props = {}) {
  const {wrapper: MDXLayout} = {
    ..._provideComponents(),
    ...props.components
  };
  return MDXLayout ? _jsx(MDXLayout, {
    ...props,
    children: _jsx(_createMdxContent, {
      ...props
    })
  }) : _createMdxContent(props);
}
function _missingMdxReference(id, component) {
  throw new Error("Expected " + (component ? "component" : "object") + " \`" + id + "\` to be defined: you likely forgot to import, pass, or provide it.");
}
"
`;

exports[`MDX processor > mdx format > compiles GFM tables 1`] = `
"import {jsx as _jsx, jsxs as _jsxs} from "react/jsx-runtime";
import {useMDXComponents as _provideComponents} from "@mdx-js/react";
export const toc = [];
function _createMdxContent(props) {
  const _components = {
    table: "table",
    tbody: "tbody",
    td: "td",
    th: "th",
    thead: "thead",
    tr: "tr",
    ..._provideComponents(),
    ...props.components
  };
  return _jsxs(_components.table, {
    children: [_jsx(_components.thead, {
      children: _jsxs(_components.tr, {
        children: [_jsx(_components.th, {
          children: "a"
        }), _jsx(_components.th, {
          children: "b"
        })]
      })
    }), _jsx(_components.tbody, {
      children: _jsxs(_components.tr, {
        children: [_jsx(_components.td, {
          children: "c"
        }), _jsx(_components.td, {
          children: "d"
        })]
      })
    })]
  });
}
export default function MDXContent(props = {}) {
  const {wrapper: MDXLayout} = {
    ..._provideComponents(),
    ...props.components
  };
  return MDXLayout ? _jsx(MDXLayout, {
    ...props,
    children: _jsx(_createMdxContent, {
      ...props
    })
  }) : _createMdxContent(props);
}
"
`;

exports[`MDX processor > mdx format > exports the table of contents 1`] = `
"import {jsx as _jsx} from "react/jsx-runtime";
import {useMDXComponents as _provideComponents} from "@mdx-js/react";
export const toc = [{
  "value": "Heading",
  "id": "heading",
  "level": 2
}];
function _createMdxContent(props) {
  const _components = {
    h2: "h2",
    ..._provideComponents(),
    ...props.components
  };
  return _jsx(_components.h2, {
    id: "heading",
    children: "Heading"
  });
}
export default function MDXContent(props = {}) {
  const {wrapper: MDXLayout} = {
    ..._provideComponents(),
    ...props.components
  };
  return MDXLayout ? _jsx(MDXLayout, {
    ...props,
    children: _jsx(_createMdxContent, {
      ...props
    })
  }) : _createMdxContent(props);
}
"
`;

exports[`MDX processor > mdx format > preserves nested admonitions and rich titles 1`] = `
"import {Fragment as _Fragment, jsx as _jsx, jsxs as _jsxs} from "react/jsx-runtime";
import {useMDXComponents as _provideComponents} from "@mdx-js/react";
export const toc = [];
function _createMdxContent(props) {
  const _components = {
    a: "a",
    code: "code",
    em: "em",
    p: "p",
    strong: "strong",
    ..._provideComponents(),
    ...props.components
  }, {Admonition} = _components;
  if (!Admonition) _missingMdxReference("Admonition", true);
  return _jsx(Admonition, {
    className: "one two",
    id: "outer",
    type: "note",
    title: _jsxs(_Fragment, {
      children: [_jsx(_components.strong, {
        children: "Outer"
      }), " ", _jsx(_components.code, {
        children: "title"
      }), " ", "😄"]
    }),
    children: _jsx(Admonition, {
      type: "tip",
      title: _jsxs(_Fragment, {
        children: [_jsx(_components.em, {
          children: "Inner"
        }), " ", _jsx(_components.a, {
          href: "/resolved-link",
          children: "link"
        })]
      }),
      children: _jsx(_components.p, {
        children: "Body"
      })
    })
  });
}
export default function MDXContent(props = {}) {
  const {wrapper: MDXLayout} = {
    ..._provideComponents(),
    ...props.components
  };
  return MDXLayout ? _jsx(MDXLayout, {
    ...props,
    children: _jsx(_createMdxContent, {
      ...props
    })
  }) : _createMdxContent(props);
}
function _missingMdxReference(id, component) {
  throw new Error("Expected " + (component ? "component" : "object") + " \`" + id + "\` to be defined: you likely forgot to import, pass, or provide it.");
}
"
`;

exports[`MDX processor > preserves JSX and expressions in admonition titles 1`] = `
"import {Fragment as _Fragment, jsx as _jsx, jsxs as _jsxs} from "react/jsx-runtime";
import {useMDXComponents as _provideComponents} from "@mdx-js/react";
export const toc = [];
function _createMdxContent(props) {
  const _components = {
    p: "p",
    strong: "strong",
    ..._provideComponents(),
    ...props.components
  }, {Admonition} = _components;
  if (!Admonition) _missingMdxReference("Admonition", true);
  return _jsx(Admonition, {
    type: "tip",
    title: _jsxs(_Fragment, {
      children: [_jsx(_components.strong, {
        children: "Title"
      }), " ", _jsx("span", {
        style: {
          color: "red"
        },
        children: 1 + 1
      })]
    }),
    children: _jsx(_components.p, {
      children: "Body"
    })
  });
}
export default function MDXContent(props = {}) {
  const {wrapper: MDXLayout} = {
    ..._provideComponents(),
    ...props.components
  };
  return MDXLayout ? _jsx(MDXLayout, {
    ...props,
    children: _jsx(_createMdxContent, {
      ...props
    })
  }) : _createMdxContent(props);
}
function _missingMdxReference(id, component) {
  throw new Error("Expected " + (component ? "component" : "object") + " \`" + id + "\` to be defined: you likely forgot to import, pass, or provide it.");
}
"
`;

exports[`MDX processor > preserves legacy admonition titles 1`] = `
"import {jsx as _jsx} from "react/jsx-runtime";
import {useMDXComponents as _provideComponents} from "@mdx-js/react";
export const toc = [];
function _createMdxContent(props) {
  const _components = {
    p: "p",
    ..._provideComponents(),
    ...props.components
  }, {Admonition} = _components;
  if (!Admonition) _missingMdxReference("Admonition", true);
  return _jsx(Admonition, {
    title: "Custom title",
    type: "note",
    children: _jsx(_components.p, {
      children: "Body"
    })
  });
}
export default function MDXContent(props = {}) {
  const {wrapper: MDXLayout} = {
    ..._provideComponents(),
    ...props.components
  };
  return MDXLayout ? _jsx(MDXLayout, {
    ...props,
    children: _jsx(_createMdxContent, {
      ...props
    })
  }) : _createMdxContent(props);
}
function _missingMdxReference(id, component) {
  throw new Error("Expected " + (component ? "component" : "object") + " \`" + id + "\` to be defined: you likely forgot to import, pass, or provide it.");
}
"
`;

exports[`MDX processor > preserves legacy comments 1`] = `
"import {Fragment as _Fragment, jsx as _jsx} from "react/jsx-runtime";
import {useMDXComponents as _provideComponents} from "@mdx-js/react";
export const toc = [];
function _createMdxContent(props) {
  return _jsx(_Fragment, {});
}
export default function MDXContent(props = {}) {
  const {wrapper: MDXLayout} = {
    ..._provideComponents(),
    ...props.components
  };
  return MDXLayout ? _jsx(MDXLayout, {
    ...props,
    children: _jsx(_createMdxContent, {
      ...props
    })
  }) : _createMdxContent(props);
}
"
`;

exports[`MDX processor > preserves legacy heading IDs 1`] = `
"import {jsx as _jsx} from "react/jsx-runtime";
import {useMDXComponents as _provideComponents} from "@mdx-js/react";
export const toc = [{
  "value": "Heading",
  "id": "custom-id",
  "level": 2
}];
function _createMdxContent(props) {
  const _components = {
    h2: "h2",
    ..._provideComponents(),
    ...props.components
  };
  return _jsx(_components.h2, {
    id: "custom-id",
    children: "Heading"
  });
}
export default function MDXContent(props = {}) {
  const {wrapper: MDXLayout} = {
    ..._provideComponents(),
    ...props.components
  };
  return MDXLayout ? _jsx(MDXLayout, {
    ...props,
    children: _jsx(_createMdxContent, {
      ...props
    })
  }) : _createMdxContent(props);
}
"
`;

exports[`MDX processor > preserves raw HTML in CommonMark 1`] = `
"import {jsx as _jsx} from "react/jsx-runtime";
import {useMDXComponents as _provideComponents} from "@mdx-js/react";
export const toc = [];
function _createMdxContent(props) {
  const _components = {
    div: "div",
    ..._provideComponents(),
    ...props.components
  };
  return _jsx(_components.div, {
    className: "custom",
    children: "HTML content"
  });
}
export default function MDXContent(props = {}) {
  const {wrapper: MDXLayout} = {
    ..._provideComponents(),
    ...props.components
  };
  return MDXLayout ? _jsx(MDXLayout, {
    ...props,
    children: _jsx(_createMdxContent, {
      ...props
    })
  }) : _createMdxContent(props);
}
"
`;

exports[`MDX processor > supports emoji=false 1`] = `
"import {jsx as _jsx} from "react/jsx-runtime";
import {useMDXComponents as _provideComponents} from "@mdx-js/react";
export const toc = [];
function _createMdxContent(props) {
  const _components = {
    p: "p",
    ..._provideComponents(),
    ...props.components
  };
  return _jsx(_components.p, {
    children: "Hello :smile: :unknown_shortcode:"
  });
}
export default function MDXContent(props = {}) {
  const {wrapper: MDXLayout} = {
    ..._provideComponents(),
    ...props.components
  };
  return MDXLayout ? _jsx(MDXLayout, {
    ...props,
    children: _jsx(_createMdxContent, {
      ...props
    })
  }) : _createMdxContent(props);
}
"
`;

exports[`MDX processor > supports emoji=true 1`] = `
"import {jsx as _jsx, jsxs as _jsxs} from "react/jsx-runtime";
import {useMDXComponents as _provideComponents} from "@mdx-js/react";
export const toc = [];
function _createMdxContent(props) {
  const _components = {
    p: "p",
    ..._provideComponents(),
    ...props.components
  };
  return _jsxs(_components.p, {
    children: ["Hello ", "😄", " :unknown_shortcode:"]
  });
}
export default function MDXContent(props = {}) {
  const {wrapper: MDXLayout} = {
    ..._provideComponents(),
    ...props.components
  };
  return MDXLayout ? _jsx(MDXLayout, {
    ...props,
    children: _jsx(_createMdxContent, {
      ...props
    })
  }) : _createMdxContent(props);
}
"
`;
